resolvido bug da autocomplete bar, maps estar sobreponto footer e algumas funções do dark mode

--- a/src/app/pages/mapa/mapa.page.scss
+++ b/src/app/pages/mapa/mapa.page.scss
@@ -3,11 +3,11 @@
 
 .map-container {
   width: 100%;
-  height: 100%;
+  height: 101vh;
   position: absolute;
   top: 0;
   left: 0;
-  
+  overflow: hidden;
 }
 
 
