--- a/src/app/pages/subpages/config-inicial/config-inicial.page.scss
+++ b/src/app/pages/subpages/config-inicial/config-inicial.page.scss
@@ -45,6 +45,11 @@ ion-toolbar {
     color: #a4071a;
 }
 
-
+.prediction-div{
+    width: 100%;
+    height: max-content;
+    display: flex;
+    justify-content: center;
+}
 
 
