--- a/src/global.scss
+++ b/src/global.scss
@@ -771,8 +771,8 @@ ion-button,
     height: max-content;
     background-color: #fff;
     position: absolute;
-    top: 57%;
-    left: 58%;
+    top: 58%;
+    left: 59%;
     transform: translate(-50%, -50%);
     z-index:2;
     border-radius: 5px;
@@ -786,11 +786,12 @@ ion-button,
   width: 70px;
   height: 70px;
   position: absolute;
-  top: 59%;
+  top: 55%;
   left: 20%;
   transform: translate(-50%, -50%);
-  z-index:3;
-  transform: rotate(-15deg);
+  z-index: -100;
+  transform: rotate(-20deg);
+
 
 }
 #seta-dark{
@@ -798,11 +799,11 @@ ion-button,
   width: 0px;
   height: 0px;
   position: absolute;
-  top: 59%;
+  top: 55%;
   left: 20%;
   transform: translate(-50%, -50%);
-  z-index:3;
-  transform: rotate(-15deg);
+  z-index: -100;
+  transform: rotate(-20deg);
 }
 //letreiros
 .carousel-title-page-6{
@@ -819,7 +820,7 @@ ion-button,
     span{
     font-weight: 800;
   }
-  margin-top: 25%;
+  margin-top: 0%;
   
 }
 //fim dos letreiros
@@ -1078,6 +1079,22 @@ ion-checkbox::part(container) {
     width: 50%;
   }
 //fim da search bar
+
+//previsao da prediction
+.autocomplete-list{
+  position: absolute;
+  width: 85%;
+  z-index: 1000;
+  height: max-content;
+  max-height: 270px;
+  background-color: #e8e8e8;
+  overflow-y: scroll;
+}
+#item-prediction{
+  --background: #e8e8e8 !important;
+  color: #0e2b52;
+}
+//fim da prediction
 
 //fim da localização
 
@@ -1504,47 +1521,6 @@ body.dark .card-home {
 }
 //fim do cards tela principal
 
-//barra de pesquisa
-body.dark .search {
-  background: #fff;
-}
-
-// perninha do Lupa
-body.dark .search::before {
-  background: #1a1a1a;
-}
-
-// bolinha do Lupa
-body.dark .search::after {
-  border: 2px solid #1a1a1a;
-}
-
-body.dark .container-search input {
-  background: #1a1a1a;
-  color: #fff;
-  border: 2px solid #fff;
-  /* Texto da direita para esquerda */
-}
-
-body.dark .container-search input:focus~.search {
-  background: #fff;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-}
-
-//perninha do X
-body.dark .container-search input:focus~.search::before {
-  background-color: #1a1a1a;
-}
-
-body.dark .container-search input:focus~.search::after {
-  background: #1a1a1a;
-}
-
-body.dark .container-search input::placeholder {
-  color: #fff;
-}
-//fim da barra de pesquisa
-
 //FIM DO PATHS.SCSS
 
 //-----------------------------------------------//
@@ -1837,9 +1813,13 @@ body.dark #subtitulo-config-inicial{
 //btLocalização
 body.dark #btLocalizacao{
   --color: #fff;
+  --background: transparent;
+  border: 3px solid #f5f5f5;
 }
 //fim do btLocalização
-
+body.dark #letreiro-btLocalizacao{
+  color: #fff;
+}
 //texto entre button e input
 body.dark #text-entre-2{
   color: #fff;
@@ -1878,6 +1858,18 @@ body.dark #text-entre-2{
     background-color: #fff;
   }
 //fim da search bar
+
+//previsao da prediction
+body.dark .autocomplete-list{
+  
+  background-color: #1a1a1a;
+  
+}
+body.dark #item-prediction{
+  --background: #1a1a1a !important;
+  color: #fff;
+}
+//fim da prediction
 
 //fim da localização
 
